lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:1: error: ';' expected but '(' found.
 var Segment: Array[Point](2)
                          ^